--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ packages = [{include = "eat_it"}]
 [tool.poetry.dependencies]
 python = "^3.9"
 flask = "^2.2.2"
+pytest = "^7.2.0"
 
 
 [build-system]
