--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,15 +2,17 @@
 name = "eat-it"
 version = "0.1.0"
 description = ""
-authors = ["MateuszGontarek <mateuszgontarek2020@gmail.com>"]
+authors = ["Your Name <you@example.com>"]
 readme = "README.md"
 packages = [{include = "eat_it"}]
 
 [tool.poetry.dependencies]
-python = "^3.9"
+python = "^3.11"
 flask = "^2.2.2"
-pytest = "^7.2.0"
 
+
+[tool.poetry.group.dev.dependencies]
+pytest = "^7.2.0"
 
 [build-system]
 requires = ["poetry-core"]
